# docs/api.yaml
@@ -1715,6 +1715,14 @@ components:
           format: uri
     Question:
       type: object
+      required:
+        - id
+        - title
+        - content
+        - participant
+        - upvotes
+        - isAnonymous
+        - createdAt
       properties:
         id:
           type: string
@@ -1807,15 +1815,13 @@ components:
     QuestionInput:
       type: object
       required:
+        - title
         - content
       properties:
         title:
           type: string
         content:
           type: string
-        participantId:
-          type: string
-          format: uuid
         isAnonymous:
           type: boolean
           default: false
